# record-tool

./: docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  redis_handler.rs  socket_handler.rs
frontend/: Dockerfile  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: WebSocketComp.jsx
frontend/src/components/microphone/: MicroPhoneComp.jsx
nginx/: nginx.conf
